# alamgu

./: .gitignore  1_53.nix  Cargo.nix  ChangeLog.md  LICENSE  README.md  crate2nix.json  default.nix  per-device.nix  release.nix  tarball-default.nix  tarball-shell.nix  usbtool.nix  utils.nix
dep/alamgu-generic-cli/: github.json
dep/cargo-ledger/: github.json
dep/cargo-watch/: github.json
dep/crate2nix/: github.json
dep/ledger-device-rust-sdk/: github.json
dep/ledgerctl/: github.json
dep/llvm-ledger-ropi/: github.json
dep/nixpkgs/: github.json
dep/nixpkgs-mozilla/: github.json
dep/speculos/: github.json
dep/stack-sizes/: github.json
lib/: default.nix
llvm-pass/: CMakeLists.txt
llvm-pass/LedgerROPI/: CMakeLists.txt  Pass.cpp
node/cli/: README.md  composed.nix  default.nix  node-packages.nix  package.json  supplement.json  supplement.nix  tsconfig.json
node/cli/src/: cli.ts
node/cli/src/commands/: getAddress.ts  sign.ts
rust/ledger-async-block/: Cargo.toml
rust/ledger-async-block/src/: lib.rs
rust/ledger-log/: Cargo.toml
rust/ledger-log/src/: lib.rs
rust/prompts-ui/: Cargo.toml
rust/prompts-ui/src/: lib.rs
stdlib/: .gitignore  Cargo.nix  README.md  cargo.py  crate2nix.json  fix-nix-store-paths.sed  src-for-crate2nix-nixpkgs-sysroot-stub-crate.nix  src.nix  update-lockfile.sh
utils/: Cargo.nix  crate2nix.json
