[package]
name = "ledger-async-block"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
ledger-log = "*"
pin-project = "1.0.10"
nanos_sdk = "*"
ledger-parser-combinators = "*"

[patch.crates-io]
ledger-parser-combinators = { git = "https://github.com/obsidiansystems/ledger-parser-combinators", branch = "async" }
ledger-log = { git = "https://github.com/obsidiansystems/ledger-platform", branch="wip-async" }
nanos_sdk = { git = "https://github.com/obsidiansystems/ledger-nanos-sdk.git", branch = "use-ambient-compiler-and-target" }
