[package]
name = "prompts-ui"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" } 
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" } 
ledger-log = { path = "../ledger-log" } 


[features]
speculos = ["nanos_sdk/speculos"]
